--- a/fastapi/requirements.txt
+++ b/fastapi/requirements.txt
@@ -1,12 +1,7 @@
-pymongo>=3.1
-fastapi
-uvicorn
-sqlmodel
-typer
-dynaconf
-jinja2
-pydantic>=1.8.2
-python-multipart
-requests[security] == 2.9.1
-logging
-python-dotenv
+pymongo == 4.3.3
+fastapi[all] == 0.94.0
+uvicorn == 0.21.0
+jinja2 == 3.1.2
+pydantic == 1.10.6
+requests == 2.25.1
+python-dotenv == 0.21.0
