Updated setup to tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,6 @@
 [flake8]
 ignore=Q000,WPS306,I00,WPS226,C812,WPS221,D100,D103,WPS421,WPS305,WPS440,WPS231,WPS420,F403,F405,WPS347,D101,D102,WPS602,WPS214,N802,WPS110,WPS210,WPS504,D107,D105,WPS125,WPS202,WPS115,N815,WPS323
 exclude=config.py
+per-file-ignores =
+  test_*.py: S101,DAR101,D100,S106
 max-line-length=109
