--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -29,7 +29,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pytest==6.2.5
+        cd fastapi
         pip install -r requirements.txt
+        cd ..
     - name: Pytest
       run: |
         cd fastapi
