--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -13,6 +13,7 @@ jobs:
     - name: Установка зависимостей
       run: |
         python -m pip install --upgrade pip
+        pip install -r tests/flake_requirements.txt
     - name: Flake8
       run: flake8 .
   container-job:
