--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,4 @@
 [flake8]
-ignore=Q000,WPS433,WPS407,C819,WPS306,I00,WPS300,E800,D106,WPS226,WPS360,C812,D401,WPS115,DAR201,N400,WPS317,E502,WPS202,WPS221,WPS318,WPS301,E117,WPS220,RST210,D100,WPS212,D107,WPS504,D103,D105,WPS421,WPS305,WPS457,WPS237,WPS440,WPS232,WPS231,WPS420,F403,F405,WPS347,D101,D102,WPS602,WPS214,N802,WPS110,WPS210,E123,E251
+ignore=Q000,WPS433,WPS407,C819,WPS306,I00,WPS300,E800,D106,WPS226,WPS360,C812,D401,WPS115,DAR201,N400,WPS317,E502,WPS202,WPS221,WPS318,WPS301,E117,WPS220,RST210,D100,WPS212,D107,WPS504,D103,D105,WPS421,WPS305,WPS457,WPS237,WPS440,WPS232,WPS231,WPS420,F403,F405,WPS347,D101,D102,WPS602,WPS214,N802,WPS110,WPS210,E123,E251,C419,S101
 exclude=config.py
 max-line-length=109
