--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -41,8 +41,8 @@ jobs:
         python -m pip install --upgrade pip
     - name: Тесты bash-curl
       run: |
-        pip install psycopg2
-        pip install dotenv
+        pip install psycopg2-binary
+        pip install python-dotenv
         chmod +x tests/test.sh
         ./tests/test.sh
     - name: Тесты python-requests
